<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="io.paraga.moneytrackerdev.io.paraga.moneytrackerviews.MainActivity"
    >
    <group android:id="@+id/firstGroup">
        <item
            android:enabled="true"
            android:icon="@drawable/account"
            android:id="@+id/account"
            android:orderInCategory="100"
            android:title="@string/account"
            app:showAsAction="never"
            />
        <item
            android:checked="true"
            app:itemIconSize="32dp"

            android:icon="@drawable/language"
            android:id="@+id/language"
            android:orderInCategory="100"
            android:title="@string/change_language"
            app:showAsAction="never" />
        <item
            app:itemIconSize="32dp"

            android:icon="@drawable/paint"
            android:id="@+id/theme"
            android:orderInCategory="100"
            android:title="@string/dark_theme"
            />
    </group>



    <group android:id="@+id/secondGroup">
        <item
            app:itemIconSize="32dp"

            android:icon="@drawable/category"
            android:id="@+id/category"
            android:orderInCategory="100"
            android:title="@string/category"
            app:showAsAction="never"

            />
        <item
            app:itemIconSize="32dp"

            android:icon="@drawable/ic_all_wallet"
            android:id="@+id/setting"
            android:orderInCategory="100"
            android:title="@string/wallet"
            />
        <item
            app:itemIconSize="32dp"

            android:icon="@drawable/main_currency"
            android:id="@+id/mainCurrency"
            android:orderInCategory="100"
            android:title="@string/main_currency"
            />
    </group>
    <group android:id="@+id/thirdGroup">
        <item
            app:itemIconSize="32dp"

            android:icon="@drawable/review"
            android:id="@+id/review"
            android:orderInCategory="100"
            android:title="@string/review"
            app:showAsAction="never"

            />
        <item
            app:itemIconSize="32dp"

            android:icon="@drawable/share"
            android:id="@+id/share"
            android:orderInCategory="100"
            android:title="@string/share"
            />
    </group>
    <group android:id="@+id/forthGroup">
        <item
            app:itemIconSize="32dp"

            android:icon="@drawable/privacy"
            android:id="@+id/privacy"
            android:orderInCategory="100"
            android:title="@string/privacy"
            app:showAsAction="never"

            />
        <item
            app:itemIconSize="32dp"
            android:icon="@drawable/about"
            android:id="@+id/about"
            android:orderInCategory="100"
            android:title="@string/about"
            />
    </group>

</menu>