<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="io.paraga.moneytrackerdev.io.paraga.moneytrackerviews.MainActivity"
    tools:override = "true"

    >
    <item

        android:enabled="true"
        android:icon="@drawable/trans"
        android:id="@+id/trans"
        android:orderInCategory="100"
        android:title="@string/trans"
        app:showAsAction="never" />
    <item
        android:checked="true"

        android:icon="@drawable/calendar"
        android:id="@+id/calendar"
        android:orderInCategory="100"
        android:title="@string/calendar"
        app:showAsAction="never" />
    <item

        android:icon="@drawable/add"
        android:id="@+id/add"
        android:orderInCategory="100"
        android:title=""
         />
    <item

        android:icon="@drawable/statistics"
        android:id="@+id/statistics"
        android:orderInCategory="100"
        android:title="@string/statistics"
        app:showAsAction="never"

        />
    <item
        android:icon="@drawable/settings"
        android:id="@+id/setting"
        android:orderInCategory="100"
        android:title="@string/settings"
/>
</menu>