<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:background="@drawable/dialog_subscription_expired"
    >
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_sad"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/trial_expired"
        android:textStyle="bold"
        android:textColor="?attr/colorOnSurface"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/expired_description_text"
        android:textColor="?attr/colorOnSurface"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        />
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:weightSum="2"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="0.8"
            app:cardElevation="0dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="100dp"
            app:cardBackgroundColor="@color/trans"
            >
            <TextView
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:id="@+id/cancelBtn"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:fontFamily="@font/inter_500"
                app:fontFamily="@font/inter_500"
                android:textColor="?attr/colorPrimary"

                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1.2"
            app:cardCornerRadius="100dp"
            app:cardElevation="0dp"
            android:id="@+id/saveBtn"
            android:foreground="?attr/selectableItemBackground"

            >
            <RelativeLayout
                android:background="?attr/colorPrimary"
                android:foreground="?attr/selectableItemBackground"
                android:id="@+id/okayBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/okText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:fontFamily="@font/inter_500"
                    android:letterSpacing="0.025"
                    android:text="@string/upgrade_premium"
                    android:textAllCaps="false"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="14sp"
                    app:fontFamily="@font/inter_500" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>