<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.auth.InputPwLogin"
    android:background="?attr/quaternaryBgColor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp">
            <include layout="@layout/back_button_layout"
                android:id="@+id/backBtn"

                />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_with_pw"
            style="@style/title"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:paddingStart="42dp"
                android:paddingEnd="50dp"
                android:hint="@string/password"
                android:id="@+id/password"
                android:background="@drawable/rounded_edittext"
                tools:ignore="RtlSymmetry"
                android:autofillHints=""
                android:inputType="textPassword"
                style="@style/editText"
                android:textColorHint="?attr/editTextHintTextColor"
                />
            <ImageView
                android:layout_marginStart="11dp"
                android:layout_centerVertical="true"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/lock"
                android:id="@+id/lockIcon"
                app:tint="?attr/editTextHintTextColor"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:id="@+id/pwVisibilityBtn"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/transparent"
                >

                <ImageView

                    android:id="@+id/visibilityIcon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:src="@drawable/visible"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    app:tint="?attr/editTextHintTextColor" />
            </androidx.cardview.widget.CardView>

        </RelativeLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/text_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_r_using"
                style="@style/primaryText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/emailText"
                style="@style/primaryText"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/text_user"
                app:layout_constraintTop_toTopOf="@+id/text_user"
                app:layout_constraintBottom_toBottomOf="@+id/text_user"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_login"
                style="@style/primaryText"
                app:layout_constraintTop_toBottomOf="@+id/text_user"
                app:layout_constraintStart_toStartOf="@+id/text_user"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="100dp"
            android:layout_marginTop="24dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/continue_text"
                android:textSize="16sp"
                android:id="@+id/loginBtn"
                android:background="@drawable/rounded_btn_states"
                style="@style/Button"
                android:stateListAnimator="@null"
                android:fontFamily="@font/inter_500"
                app:fontFamily="@font/inter_500"
                android:foreground="?attr/selectableItemBackground"

                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="100dp"
            android:layout_marginTop="11dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="22dp"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/forget_pw"
                android:textSize="16sp"
                android:id="@+id/forgetPwBtn"
                style="@style/Button"
                android:background="?attr/quaternaryBgColor"
                android:stateListAnimator="@null"
                android:fontFamily="@font/inter_500"
                app:fontFamily="@font/inter_500"
                android:foreground="?attr/selectableItemBackground"
                android:textColor="?attr/primaryText"
                />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>